--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -14,7 +14,7 @@
   <body>
   <div class="container">
       <div class="row">
-          <div class="col-md-6 col-md-offset-3">
+          <div class="col-xxl-6 col-xxl-offset-3 jumbotron">
               <div class="text-center">
                   <h1> {% block header_text %}{% endblock %}</h1>
                   <form method="post" action="{% block form_action %}{% endblock %}">
@@ -25,7 +25,7 @@
           </div>
       </div>
       <div class="row">
-          <div class="col-md-6 col-md-offset-3">
+          <div class="col-xxl-6 col-xxl-offset-3">
               {% block table %}
               {% endblock %}
           </div>
